--- a/mood_detector_web/requirements.txt
+++ b/mood_detector_web/requirements.txt
@@ -1,7 +1,7 @@
 Flask==3.0.0
 gunicorn==21.2.0
 onnxruntime==1.17.0
-numpy==1.26.3
+numpy<2
 opencv-python-headless==4.9.0.80
 Pillow==10.2.0
 mediapipe==0.10.9
