--- a/mood_detector_web/requirements.txt
+++ b/mood_detector_web/requirements.txt
@@ -1,6 +1,6 @@
 Flask==3.0.0
 gunicorn==21.2.0
-onnxruntime-openvino==1.17.0
+onnxruntime==1.17.0
 numpy==1.24.3
 opencv-python-headless==4.9.0.80
 Pillow==10.2.0
