--- a/render.yaml
+++ b/render.yaml
@@ -4,6 +4,6 @@ services:
     env: python
     rootDir: mood_detector_web
     buildCommand: pip cache purge && pip install --no-cache-dir -r requirements.txt && python ../download_model.py
-    startCommand: gunicorn app:app --bind 0.0.0.0:$PORT --timeout 120 --workers 1
+    startCommand: gunicorn app:app --bind 0.0.0.0:$PORT --timeout 300 --workers 1 --threads 1 --worker-tmp-dir /dev/shm --max-requests 10 --max-requests-jitter 5 --worker-class sync
     healthCheckPath: /health
     plan: free
